[tool.poetry]
name = "limebot"
version = "0.0.1dev0"
description = "A microtasking bot integrated with third-party freelancing platforms."
authors = ["Artem Malyshev <proofit404@gmail.com>"]
packages = [
  { include = "app", from = "src" },
  { include = "examples", from = "src" },
]

[tool.poetry.dependencies]
python = "3.9.1"
aiohttp = {version = "3.7.3", extras = ["speedups"]}
aiojobs = "0.3.0"
asyncpg = "0.22.0"
attrs = "19.3.0"
dependencies = "6.0.0"
generics = "3.3.0"
lxml = "4.5.2"
marshmallow = "3.10.0"
stories = "4.0.0"
stories-asyncio = "0.1.0"
stories-marshmallow = "0.1.0"
uvloop = "0.15.1"
wtforms = "2.3.3"
xmlschema = "1.5.1"

[tool.poetry.dev-dependencies]
bandit = "1.6.2"
bellybutton = "0.3.0"
black = "19.10b0"
coverage = "5.0.4"
docformatter = "1.3.1"
flake8 = "3.8.1"
flake8-2020 = "1.6.0"
flake8-blind-except = "0.1.1"
flake8-bugbear = "20.11.1"
flake8-builtins = "1.5.3"
flake8-comprehensions = "3.3.1"
flake8-docstrings = "1.5.0"
flake8-eradicate = "1.0.0"
flake8-executable = "2.0.3"
flake8-fixme = "1.1.1"
flake8-mutable = "1.2.0"
flake8-print = "3.1.4"
flake8-pytest = "1.3"
flake8-pytest-style = "1.1.1"
flake8-tidy-imports = "4.1.0"
pre-commit = "2.6.0"
pytest = "5.4.3"
pytest-deadfixtures = "2.2.0"
pytest-randomly = "3.5.0"
pytest-testmon = "1.0.2"
pytest-timeout = "1.4.2"
pytest-watch = "4.2.0"
pyupgrade = "2.7.2"
reorder-python-imports = "2.4.0"
stories-pytest = "0.1.0"
xenon = "0.7.1"
yamllint = "1.26.0"
